Correction Collapse importation des données via fichier json

--- a/src/styles/components/Collapse.scss
+++ b/src/styles/components/Collapse.scss
@@ -8,7 +8,6 @@
 
 .collapse {
     width: 335px;
-    min-height: 50vh;
 }
 
 .item {
